--- a/multiplicity.Rmd
+++ b/multiplicity.Rmd
@@ -4,6 +4,9 @@ author: "Keon-Woong Moon"
 date: "2016년 11월 19일"
 output: html_document
 runtime: shiny
+resource_files:
+- www/Dice.jpg
+- Dice.jpg
 ---
 
 ```{r setup, include=FALSE}
@@ -101,13 +104,13 @@ shinyApp(
                     표본추출번호와 p값을 볼 수 있습니다.
                     p값그래프2는 p값 순서대로 재배열한 그래프입니다.
                     임의의 한 점을 클릭하여 선택하면 해당하는 표본 자료를 볼  수 있습니다."),
-                  ggiraphOutput("plot1",width="60%")),
+                  ggiraphOutput("plot1",height="600px")),
          tabPanel("p값 그래프2",
                   conditionalPanel(condition="input.choice=='2'",
                       checkboxInput("power","검정력표시",value=TRUE),
                       checkboxInput("beta","2종에러표시",value=FALSE)
                   ),
-                  ggiraphOutput("plot2",width="60%")),
+                  ggiraphOutput("plot2",height="600px")),
          tabPanel("표본자료보기",
                   fluidRow(
                   column(4,
